fix spacing of list items in about and submit page

--- a/styles/about.css
+++ b/styles/about.css
@@ -4,3 +4,8 @@
     text-align: left;
     margin-bottom: 2rem;
 }
+
+#about ul li, #submit ul li {
+    list-style-position: inside;
+    margin-bottom: 0.5rem;
+}
