--- a/styles/main.css
+++ b/styles/main.css
@@ -44,7 +44,7 @@ main .block h1 {
 }
 
 main .block h2 {
-    margin: 2rem 0 0.5rem 0;
+    margin: 3rem 0 1rem 0;
     font-family: "SyneBold";
     width: 75%;
     border-left: 0.5rem solid var(--background);
@@ -52,7 +52,7 @@ main .block h2 {
 }
 
 main .block p {
-    line-height: 1.6rem;
+    line-height: 1.5rem;
 }
 
 main .block p a {
@@ -71,7 +71,7 @@ main a:not(:hover):focus {
 }
 
 body:not(#home) main .block ul, body:not(#home) main .block p {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 body:not(#home) main .block h1 {
